# bbinternal

./: .env  .env.container  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
src/accounts/: models.py  serializers.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_alter_account_balance.py
src/api/: urls.py
src/config/: settings.py  urls.py
src/tests/accounts/: test_account_api.py
src/tests/transactions/: test_transaction_api.py  test_transaction_service.py
src/transactions/: models.py  serializers.py  services.py  urls.py  views.py
src/transactions/migrations/: 0001_initial.py
